Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -142,7 +142,9 @@ chat.privateMessage.game.players = Spieler
 chat.privateMessage.achievements.unlocked = Errungenschaft freigespielt
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Eröffne ein Spiel
+# Fuzzy
 games.create.minRating = Min.
+# Fuzzy
 games.create.maxRating = Max.
 games.showPasswordProtectedGames = Zeige passwortgeschützte Spiele
 games.noGamesAvailable = Es gibt keine offenen Spiele. Warum erstellst du nicht eines?
@@ -647,7 +649,7 @@ tournament.status.openForRegistration = Offen für Anmeldungen
 tournament.status.closedForRegistration = Anmeldung abgeschlossen
 tournament.noStartingDate = Beginn unbekannt
 tournament.noCompletionDate = Nicht abgeschlossen
-loading = Lädt...
+loading = Lädt…
 updater.readingFileList = Lese Dateiliste
 secondAgo = Vor {0,number,#}  Sekunden
 # Wie nennen wir Maps auf Deutsch?
@@ -689,13 +691,13 @@ ranked1v1.queuePopTimer = Matche in {0,number,0}\:{1,number,00}
 # Fuzzy
 game.create.generatedMap = Neue Karte generieren
 game.avgRating.format = {0,number,#}
-game.mapGeneration.notification.title = Karte wird generiert...
+game.mapGeneration.notification.title = Karte wird generiert…
 game.mapGeneration.notification.message = Bitte warten. (Version\: {0}, Seed\: {1})
 game.mapGeneration.failed.title = Konnte Karte nicht generieren
 game.mapGeneration.failed.message = Die Generierung der zufälligen Karte ist fehlgeschlagen. Das Programm zur Generierung wird beendet.(timeout)
 game.mapGeneration.downloadGenerator.title = Lade Karten Generator {0} herunter
 # Fuzzy
-game.mapGeneration.generateMap.title = Generiere Karte... (Version\: {0}, Seed\: {1})
+game.mapGeneration.generateMap.title = Generiere Karte… (Version\: {0}, Seed\: {1})
 login.environment = Serverumgebung
 login.button.downloadUpdate = Neuste Version herunter laden
 login.button.downloadPreparing = Bereite Download vor
@@ -727,7 +729,7 @@ mapDir.changed.noneAscii = Wir haben bemerkt, dass du einen Nutzernamen mit Sond
 mapDir.changed.unix = Du benutzt ein Unix System. Wir haben deswegen deine Vault verschoben.
 mapDir.changed.oneDrive = Du benutzt OneDrive. Wir haben deswegen deine Vault verschoben.
 settings.use.secondaryVaultLocation = Benutzte einen alternativen Ort für Karten und Mods. Dies hilft ggf. wenn das Spiel eine Karte oder einen Mod nicht finden kann.
-help.title = Linksammelung
+help.title = Linksammlung
 linksTecHelpDiscord = Hilfe auf Discord
 linksTecHelpForum = Hilfe im Forum
 # Even tho shown as not used the following messages are used
@@ -742,8 +744,8 @@ settings.use.advancedIceLog = Extra Logs für den Ice-Adapter.
 mapVault.upload.rules = Ich habe die Regeln bezüglich des Kartenuploads gelesen.
 mapVault.upload.openRules = Zeige Regeln
 gameQuality.undefined = -
-chat.userContext.kickGame = Von Spiel entfernen...
-chat.userContext.kickLobby = Aus der Lobby entfernen...
+chat.userContext.kickGame = Von Spiel entfernen…
+chat.userContext.kickLobby = Aus der Lobby entfernen…
 moderator.ban.reason = Grund des Banns
 moderator.ban.duration = Dauer des Banns
 moderator.ban.success = Erfolgreich entfernt und gebannt
@@ -841,19 +843,19 @@ modVault.modManager = Verwalte aktivierte mods
 modVault.manageMods = Verwalte aktivierte mods
 theme.needsRestart.message = Das Wechseln zu Themen ''{0}'' bedarf einem Neustart.
 theme.needsRestart.quit = Beenden
-vault.loading = Lade...
+vault.loading = Lade…
 vault.displayQuery = Zeige Abfrage
 vault.queryPrompt = Erstelle oben eine Abfrage or gebe direkt eine ein
 vault.searchError = Bei der Suche ist ein Fehler aufgetreten.
-vault.upload = Upload...
+vault.upload = Upload…
 replay.team = Team {0}
 replay.noTeam = Keine Teams
 search.perPage = Elemente pro Seite
-game.generateMap = neue Karte generieren
+game.generateMap = Generiere neue Karte
 game.generateMap.recreate = Generiere Karte erneut basierend auf folgendem Namen\:
 game.generateMap.generateNew = Generiere eine neue Karte mit folgenden Einstellungen\:
 game.generateMap.dialog = Kartengeneratoroptionen
-game.generateMap.nameCaution = Gebe den Namen einer Karte ein die du erneut generieren willst. Kartenname muss dem Muster neroxis_map_generator_(version)_(seed)_(optionen) entsprechen.
+game.generateMap.nameCaution = Gib den Namen einer Karte ein die du erneut generieren willst. Kartenname muss dem Muster neroxis_map_generator_(version)_(seed)_(optionen) entsprechen.
 game.generateMap.generatedName = Kartenname
 game.generateMap.waterSlider = Wasser
 game.generateMap.plateauSlider = Plateaus
@@ -863,7 +865,7 @@ game.generateMap.random = Zufällig
 game.generateMap.none = Keine
 game.generateMap.lots = Viele
 settings.appearance.backgroundImage = Hintergrundbild
-settings.appearance.backgroundImage.description = Ein Hintergrundbild erhöht die Speichernutzung.
+settings.appearance.backgroundImage.description = Ein Hintergrundbild erhöht die Arbeitsspeicherbelegung.
 settings.checkForPrerelease.description = Wenn nach Clientupdates geprüft wird, auch nach Vorveröffentlichungen suchen.
 settings.prereleaseFeedback.description = Trete unserem Discord Kanal bei um Feedback für Client Vorveröffentlichungen zu geben.
 settings.general.startTab.description = Tab das beim Öffnen des Clients ausgewählt ist.
@@ -924,7 +926,7 @@ game.reasonNotValid.other = Andere
 game.valid = Spiel gewertet
 exitWarning.title = Warnung
 exitWarning.message = Forged Alliance läuft noch, bist du sicher dass du den Client schließen willst?
-chat.userContext.broadcast = Broadcastnachricht...
+chat.userContext.broadcast = Broadcastnachricht…
 corruptedModsError.notification = Ein unerwarteter Fehler verhindert den Client daran den folgenden Mod zu laden\: {0}.
 settings.data = Daten und Caches
 settings.data.gameDataCache.time = Gültigkeit des Spieldatencaches in Tagen
@@ -935,9 +937,13 @@ settings.data.clearCache = Cache leeren
 settings.data.clearCache.description = Not nicht implementiert. Hilf und diesen Knopf einzubauen.
 settings.data.clearCache.button = Caches leeren
 settings.general.cacheLifeTime = Dateien puffern für (in Tagen)\:
+games.create.enforceRating = Erzwinge Wertung
 chat.filter.countryPrompt = Ländercode
 game.generateMap.generationType = Generierungstyp
+game.generateMap.casual = Freizeit
 game.generateMap.tournament = Turnier
+game.generateMap.blind = Blind
+settings.date.system = Auto
 settings.date.mdy = Monat/Tag/Jahr
 settings.date.dmy = Tag/Monat/Jahr
 settings.chat.dateFormat = Datumsformat
@@ -979,6 +985,10 @@ query.dateRangeFilter = {0}\: von {1} bis {2}
 query.afterDate = Nach
 query.beforeDate = Vor
 mod.onlyRanked = nur gewertete Mods
+search.lowValue = Minimum
+search.highValue = Maximum
+search.afterDate = Startdatum
+search.beforeDate = Enddatum
 teammatchmaking.leaveParty = Gruppe verlassen
 teammatchmaking.invitePlayer = Spieler einladen
 teammatchmaking.invite = Einladen
@@ -990,7 +1000,7 @@ teammatchmaking.notification.invite.title = Zu Gruppe eingeladen
 teammatchmaking.notification.invite.message = {0} hat dich eingeladen seiner Gruppe beizutreten
 teammatchmaking.notification.invite.join = Beitreten
 teammatchmaking.match.found = Spiel gefunden\!
-teammatchmaking.match.starting = Spiel startet...
+teammatchmaking.match.starting = Spiel startet…
 teammatchmaking.match.cancelled = Spiel abgebrochen\!
 teammatchmaking.notification.matchFound.title = Spiel gefunden
 teammatchmaking.notification.matchFound.message = Ein Spiel wurde gefunden und wird gleich starten
@@ -1006,14 +1016,17 @@ teammatchmaking.queueTitle = Trete einer oder mehreren Warteschlangen bei wenn d
 teammatchmaking.queueTitle.inGame = Du kannst keiner Warteschlange beitreten während du im Spiel bist
 teammatchmaking.queueTitle.memberInGame = Du kannst keiner Warteschlange beitreten während jemand im Spiel ist
 teammatchmaking.queueTitle.inQueue = Deine Gruppe ist jetzt in der Warteschlange
-teammatchmaking.queue.ladder1v1 = 1v1 Schlange
-teammatchmaking.queue.tmm2v2 = 2v2 Schlange
+teammatchmaking.queue.ladder1v1 = 1v1 spielen
+teammatchmaking.queue.tmm2v2 = 2v2 spielen
 chat.groupChat.playerDisconnect = {0} ist ausgetreten
 chat.groupChat.playerConnect = {0} ist beigetreten
 game.generateMap.mexSlider = Mexes
 game.generateMap.reclaimSlider = Reclaim
+game.generateMap.unexplored = Unerforscht
 review.delete.error = Diese Rezension konnte nicht gelöscht werden
 review.save.error = Diese Rezension konnte nicht gespeichert werden
+settings.general.debugLog = Aktiviere DEBUG Logging
+settings.general.debugLog.description = Erhöhe die Logging-Stufe auf DEBUG für Fehlersuchen.
 settings.general.debugLog.button = Start
 replay.inQueue = Replay konnte nicht gestartet werden weil du in einer Warteschlange bist. Verlasse die Schlange um Replays anzuschauen.
 replay.inParty = Replay konnte nicht gestartet werden weil du in einer Gruppe bist. Verlasse die Gruppe um Replays anzuschauen.
@@ -1031,4 +1044,53 @@ copyError = Kopiere Fehler
 game.crash = Es sieht so aus als wäre Supreme Commander\: Forged Alliance abgestürzt. Schaue dir das Spielelog {0} an für mehr Informationen.
 replayNotAvailable = Replay {0,number,#} ist noch nicht vom Server erhältlich. Bitte versuche es später noch einmal.
 close = Schließen
+userMenu.moderationReport = Berichte an die Moderation
 game.report = Spiel melden
+report.description.placeholder = Bitte erstelle eine kurze aber genaue Beschreibung des zu berichtenden Vorfalls. Falls keine Aufzeichnungen des Vorfalls zur Verfügung stehen (z. B. bei in \#aeolus oder im Spiel vorgefallenen Dingen), stelle uns ein Bildschirmfoto davon zur Verfügung. Du kannst einen beliebigen Bild-Hosting-Anbieter verwenden, z. B. http\://imgur.com/.
+report.description = Vorfallsbericht
+report.id = ID
+report.createTime = Erstellt Am
+report.offender = Täter
+report.moderator = Moderator
+report.notice = Anmerkung
+report.status = Status
+report.gameID = Replay ID
+# Is that translatable - like Spiel-Zeitstempel? Where can this value be found?
+report.gameTime = Game Time Code
+report.gamePrompt = (falls der Vorfall im Spiel geschah)
+report.userSearch = Täter
+# I would prefer another word than "Moderation". "Moderation Report" sounds strange. What about "Incident Report" or "User Report"?
+report.title = Bericht an die Moderation
+report.newReport = Neuer Bericht an die Moderation
+report.submit = Bericht Senden
+report.noReports = Du hast im letzten Jahr keine Berichte gesendet.
+report.awaiting = Im Wartestatus
+report.processing = In Bearbeitung
+report.completed = Abgeschlossen
+report.discarded = Abgelehnt
+report.previousReports = Vorherige Berichte
+report.warning.title = Warnung
+# The grammar of the English version seems to be incorrect.
+report.warning.noGameTime = Dieser Bericht besagt, dass der Vorfall im Spiel geschah. Bitte trage den Game Time Code ein.
+report.warning.noOffender = Berichte müssen einen Täter benennen.
+report.warning.noOffenderInGame = Täter spielt nicht im angegebenen Spiel.
+report.warning.noDescription = Berichte müssen eine Vorfallsbeschreibung beinhalten.
+report.warning.noPlayer = Benutzername stimmt mit keinem bekannten Spieler überein.
+report.warning.gameIdNotNumeric = Replay ID muss eine Zahl sein.
+report.warning.noGame = Replay ID stimmt mit keinem bekannten Spiel überein.
+report.error = Fehler beim Senden des Berichtes an die Moderation.
+management.maps.openButton.label = Verwalte installierte Karten
+management.maps.closeButton.label = Schließen
+management.maps.allMaps = Alle Karten
+management.maps.customMaps = Benutzerdefinierte Karten
+management.maps.officialMaps = Offizielle Karten
+management.maps.uninstall.error = Kann Karte nicht deinstallieren.
+game.generateMap.commandLine = Kommandozeilenargumente
+game.generateMap.style = Kartenstil
+game.filter.mapHeight = Kartenhöhe, in km
+game.filter.mapWidth = Kartenbreite, in km
+replay.couldNotParse = Replay konnte nicht geparsed werden.
+game.create.numTeams = Anzahl der Teams
+teammatchmaking.searchAndInvite = Suche und lade Spieler ein
+teammatchmaking.search.prompt = Name
+teammatchmaking.search.noOneInvited = Du hast noch niemanden eingeladen.
