--- a/src/main/resources/i18n/messages_iw.properties
+++ b/src/main/resources/i18n/messages_iw.properties
@@ -145,7 +145,9 @@ chat.privateMessage.game.players = שחקנים
 chat.privateMessage.achievements.unlocked = השג הושלם בהצלחה
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = צור משחק
+# Fuzzy
 games.create.minRating = מיני.
+# Fuzzy
 games.create.maxRating = מקס.
 games.showPasswordProtectedGames = הראה משחקים המוגנים בסיסמה
 games.noGamesAvailable = אין משחקים פתוחים. אולי כדי לך לנסות לפתוח אחד?
