Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -144,7 +144,9 @@ chat.privateMessage.game.players = Giocatori
 chat.privateMessage.achievements.unlocked = Obiettivi sbloccati
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Crea partita
+# Fuzzy
 games.create.minRating = Min.
+# Fuzzy
 games.create.maxRating = Max.
 games.showPasswordProtectedGames = Visualizza partite private
 games.noGamesAvailable = Non ci sono partite libere. Perché non ne crei una?
