Update messages_pl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -163,7 +163,9 @@ chat.privateMessage.achievements.unlocked = Osiągnięcia
 # Once again, what do I do with this?
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Stwórz grę
+# Fuzzy
 games.create.minRating = Min.
+# Fuzzy
 games.create.maxRating = Max.
 games.showPasswordProtectedGames = Pokaż gry chronione hasłem
 games.noGamesAvailable = Nie ma otwartej gry. Może sam utworzysz?
