Update messages_ru.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -155,7 +155,9 @@ chat.privateMessage.game.players = Игроки
 chat.privateMessage.achievements.unlocked = Достижения получены
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Создать игру
+# Fuzzy
 games.create.minRating = Мин.
+# Fuzzy
 games.create.maxRating = Макс.
 games.showPasswordProtectedGames = Показывать игры с паролем
 games.noGamesAvailable = Открытых игр нет. Не создать ли её вам?
@@ -959,5 +961,29 @@ settings.date.mdy = Месяц/День/Год
 settings.date.dmy = День/Месяц/Год
 settings.chat.dateFormat = Формат даты
 settings.chat.dateFormat.description = В каком виде дата должна отображаться в чате
+chat.error.noHashTag = Имя канала должно начинаться с \# (т.е \#{0})
 game.gameStatus.hosting = Хост
+mod.idNumber = \#{0}
 label.copy = Копировать
+settings.fa.allowReplayWhileInGame = Разрешить просмотр реплеев во время игры
+settings.fa.patchGamePrefs = Модифицировать game.prefs
+settings.fa.allowReplayWhileInGame.experimental = Экспериментальная
+chat.userColor = Цвет
+review.currentVersion = Текущая версия
+review.version = Версия {0}
+main.replay = Реплеи
+main.maps = Карты
+main.mods = Моды
+game.onlyRanked = Только рейтинговые
+game.map.author = Автор карты
+vault.savedQueries = Избранное
+vault.saveQuery = Сохранить запрос
+map.onlyRanked = Только рейтинговые
+map.widthPixels = Ширина (в пикселях)
+map.heightPixels = Высота (в пикселях)
+game.generateMap.commandLine = Аргументы командной строки
+game.filter.numberOfPlayers = Количество игроков
+game.filter.mapHeight = Высота карты, в км.
+game.filter.mapWidth = Ширина карты, в км.
+settings.data.mapAndModAutoUpdate = Автообновление карт и модов
+player.info.rating = Рейтинг\:
