Update messages_es.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -149,7 +149,9 @@ chat.privateMessage.game.players = Jugadores
 chat.privateMessage.achievements.unlocked = Logros desbloqueados
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Crear partida
+# Fuzzy
 games.create.minRating = Min.
+# Fuzzy
 games.create.maxRating = Max
 games.showPasswordProtectedGames = Mostrar partidas privadas
 games.noGamesAvailable = No hay partidas abiertas. ¿Por qué no creas una?
