Update messages_tr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -144,7 +144,9 @@ chat.privateMessage.game.players = Oyuncular
 chat.privateMessage.achievements.unlocked = Açılan başarılar
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Oyun oluştur
+# Fuzzy
 games.create.minRating = En az derece
+# Fuzzy
 games.create.maxRating = en fazla derece
 games.showPasswordProtectedGames = Şİfreyle korunan oyunları göster
 games.noGamesAvailable = Açık oyun yok.Niye bir tane oluşturmuyorsun?
