Update messages_uk.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_uk.properties
+++ b/src/main/resources/i18n/messages_uk.properties
@@ -154,7 +154,9 @@ chat.privateMessage.game.players = Гравці
 chat.privateMessage.achievements.unlocked = Отримано досягнення
 chat.privateMessage.achievements.unlockedFormat = {0,number,#}/{1,number,#}
 games.create = Створити гру
+# Fuzzy
 games.create.minRating = Мін.
+# Fuzzy
 games.create.maxRating = Макс.
 games.showPasswordProtectedGames = Показати приватні ігри
 games.noGamesAvailable = Немає відкритих ігр. Може створите самі?
