Add session expired messages

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -246,6 +246,8 @@ login.progress.message = Logging in…
 login.remember = Remember Me
 login.failed = Error occurred during login
 login.badState = State returned by user service does not match initial state if this continues to occur please reach out to technical help on the forum or discord channel
+session.expired.title = Session Expired
+session.expired.message = Session Expired please enter login details again
 vault.maps = Maps
 vault.mods = Mods
 vault.onlineReplays = FAF Replays
