--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -246,6 +246,7 @@ login.progress.message = Logging in…
 login.remember = Remember Me
 login.failed = Error occurred during login
 login.badState = State returned by user service does not match initial state if this continues to occur please reach out to technical help on the forum or discord channel
+login.error = Error occurred during login error: {0}; {1}
 session.expired.title = Session Expired
 session.expired.message = Session Expired please enter login details again
 vault.maps = Maps
