Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -782,7 +782,6 @@ startTab.save = Sauvegarder
 startTab.wantToConfigure = Sélectionnez l'onglet pour commencer \:
 startTab.configure = Configurer
 vault.replays.onlyShowLastYear = L'an passé uniquement
-# Fuzzy
 game.create.spawnCount = Nombre de points d'insertion
 game.create.mapSize = Taille de la carte
 game.generate = Générer une nouvelle carte
@@ -1039,7 +1038,7 @@ userInfo.tooltipFormat.withRating = {0} ({1,number,#})
 userInfo.tooltipFormat.noRating = {0}
 # Fuzzy
 map.updater.search = Recherche de mise à jour de la carte
-teammatchmaking.chat.topic = Trouvez des partenaires et des conseils de jeu sur notre discord officiel \:
+teammatchmaking.chat.topic = Trouvez des partenaires et des conseils de jeu sur notre Discord officiel \:
 getHelp = Obtenir de l'aide
 copyError = Copier l'erreur
 findHelp = Si cette erreur persiste, utilisez le bouton pour obtenir de l'aide et ouvrir le forum d'aide. Assurez-vous de vérifier la FAQ et les topics précédents. Si vous créez un nouveau topic, veuillez inclure les logs accessibles depuis le menu en haut à gauche du client.
@@ -1101,3 +1100,13 @@ settings.data.mapAndModAutoUpdate = MAJ auto des cartes et mods
 settings.data.mapAndModAutoUpdate.description = Téléchargement automatique de la dernière version des cartes et mods lorsque vous hébergez une partie. Laissez l'option activée pour obtenir les derniers correctifs.
 player.info.rating = Niveau \:
 modVault.recommended = Favoris de l'équipe M&M
+map.all = Toutes versions
+map.current = Version courante
+login.remember = Se souvenir de moi
+login.failed = Erreur durant la connexion
+login.badState = L'état retourné par le service utilisateur ne correspond pas à l'état initial. Si le problème persiste, veuillez solliciter l'aide technique sur le forum ou sur le canal Discord.
+login.oauthBaseUrl = URL de base OAuth
+session.expired.title = Session expirée
+session.expired.message = Session expirée, veuillez re-saisir vos informations de connexion
+login.error = Erreur durant la connexion (Erreur \: {0} ; {1})
+discord.couldNotOpen = Impossible de rejoindre une partie depuis Discord
