Show announcements and offline services on login page

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1071,3 +1071,7 @@ game.filter.numberOfPlayers = Number of players
 game.filter.mapHeight = Map height, in km
 game.filter.mapWidth = Map width, in km
 player.info.rating = Rating:
+login.offlineServices.title = Some services are currently offline
+login.offlineService.text = ''{0}'' has been offline for {1}. {2}.
+reasonUnknown = Reason unknown
+temporalRange = From {0} until {1}
