Implement auto-update
Uses update4j to update the client automatically. During the build
process, an update4j.xml is generated into a folder file that also
contains all client files. This folder is then uploaded to a server
via rsync.

The client will check if a new version is available, either using the
managed configuration file that resides on the FAF server (for stable
releases) or (for pre-releases) via the GitHub releases API.

If a new version is available, the client uses update4j to download all
files to a temporary location. Afterwards, a separate Java application
is spawned which waits for the client to terminate. Once that happens,
the application will finalize the update by copying the update files
over the existing installation and removing all obsolete files.

On next client start, the application is updated.

Fixes #1753

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -347,7 +347,7 @@ clientUpdateAvailable.downloadAndInstall = Download
 clientUpdateAvailable.releaseNotes = Release notes
 clientUpdateDownloadFailed.notification = Error while downloading client update
 clientUpdateDownloadFailed.retry = Retry
-updateCheckTask.title = Checking for update
+
 clientUpdateCheckTask.title = Checking for client update
 clientUpdateDownloadTask.title = Downloading client update
 mapDownloadTask.title = Downloading map {0}
@@ -417,26 +417,28 @@ daysAgo = {0,number,#} days ago
 monthAgo = {0,number,#} month ago
 monthsAgo = {0,number,#} months ago
 yearAgo = {0,number,#} year ago
-yearsAgo = {0,number,#} years ago
+yearsAgo={0,number,#} years ago
 # This requires a restart of the program but not of the computer.
-settings.languages.restart.message = You changed the language. This requires a restart.
-settings.languages.restart = Restart
-settings.languages.system = Auto
-settings.time.system = Auto
-settings.time.12 = 12h
-settings.time.24 = 24h
-settings.windowTitle = Settings
-settings.general = General
-settings.general.rememberLastTab = Remember my last opened tab
-settings.chat = Chat
-settings.chat.maxMessages = Message History Size
-settings.chat.previews = Preview
-settings.chat.previewImages = Image URL Preview
-settings.chat.colors = Colors
-settings.chat.timeFormat = Time Format
-settings.chat.colorMode.default = Default\: Allow custom colors for specific users and categories
-settings.chat.colorMode.custom = Custom\: Allow custom colors for specific users
-settings.chat.colorMode.random = Random\: Every user has an unique, random color
+settings.languages.restart.message=You changed the language. This requires a restart.
+settings.languages.restart=Restart
+settings.languages.system=Auto
+settings.time.system=Auto
+settings.time.12=12h
+settings.time.24=24h
+settings.windowTitle=Settings
+settings.general=General
+settings.general.autoUpdate=Auto-Update
+settings.general.autoUpdate.description=Automatically updates the client in the background.
+settings.general.rememberLastTab=Remember my last opened tab
+settings.chat=Chat
+settings.chat.maxMessages=Message History Size
+settings.chat.previews=Preview
+settings.chat.previewImages=Image URL Preview
+settings.chat.colors=Colors
+settings.chat.timeFormat=Time Format
+settings.chat.colorMode.default=Default\: Allow custom colors for specific users and categories
+settings.chat.colorMode.custom=Custom\: Allow custom colors for specific users
+settings.chat.colorMode.random=Random\: Every user has an unique, random color
 settings.chat.foes = Foes
 settings.chat.hideFoe = Hide Foe Messages
 settings.notifications = Notifications
