Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -799,15 +799,15 @@ modVault.details.author = Author\: {0}
 gameSelect.select.invalidPath = Invalider Pfad
 gamePath.select.noneChosen = Du hast den Ort deines Spiels nicht angegeben\!
 gamePath.select.noValidExe = Der angegebene Speicherort enthält keine gültige Supreme Commander.exe und ist daher keine gültige Forged Alliance-Installation.
-gamePath.select.vanillaGameSelected = Der angegebene Speicherort ist eine Vanilla Installation, Sie müssen die Erweiterung Supreme Commander Forged Alliance auswählen.
-gamePath.select.fafDataSelected = Der angegebene Speicherort ist das Forged Alliance Forever-Spieldatenverzeichnis, bitte wählen Sie stattdessen die Forged Alliance-Installation.
+gamePath.select.vanillaGameSelected = Der angegebene Speicherort ist eine Vanilla Installation. Du musst die Erweiterung Supreme Commander Forged Alliance auswählen.
+gamePath.select.fafDataSelected = Der angegebene Ort ist das Forged Alliance Forever-Spieldatenverzeichnis. Bitte wähle stattdessen das Installationsverzeichnis.
 gamePath.select.error = Etwas ging schief, bei der Auswahl des Spielverzeichnis
 main.news = Nachrichten
 game.create.generatedMapNew = NEU
 game.create.defaultGameTypeMarker = (Voreinstellung)
 settings.general.startTab = Starter "Tab"
-startTab.selectTab = Wählen Sie den "Tab", mit dem Sie beginnen möchten\:
-startTab.message = Hier können Sie den Reiter auswählen, mit dem der Client startet. Sie können dies später in den Einstellungen ändern, wenn Sie möchten.
+startTab.selectTab = Wähle den Tab, mit dem du beginnen möchtest\:
+startTab.message = Hier kannst du den Tab auswählen, mit dem der Client startet. Du kannst dies später in den Einstellungen ändern.
 startTab.title = Wähle einen Reiter zum Starten
 startTab.save = Speichern
 startTab.wantToConfigure = Wähle den Startreiter aus\:
@@ -907,6 +907,7 @@ game.reasonNotValid.wrongCondition = Falsche Siegbedingung
 game.reasonNotValid.fogOfWar = Kein Nebel des Krieges
 game.reasonNotValid.cheats = Cheats erlaubt
 game.reasonNotValid.prebuilt = Vorgebaute Einheiten
+game.reasonNotValid.noRush = No Rush aktiviert
 game.reasonNotValid.unitRestriction = Einheiteinschränkungen
 game.reasonNotValid.unrankedMap = Ungewertete Karte
 game.reasonNotValid.short = Spiel zu kurz
@@ -921,6 +922,8 @@ game.reasonNotValid.teamsUnlocked = Teams entsperrt
 game.reasonNotValid.multipleTeams = mehr als 2 Teams
 game.reasonNotValid.ai = KI Spiel
 game.reasonNotValid.civiliansRevealed = Zivilisten aufgedeckt
+game.reasonNotValid.difficulty = Falsche Schwierigkeit
+game.reasonNotValid.expansion = Erweiterung deaktiviert
 game.reasonNotValid.spawn = Keine festen Startpositionen
 game.reasonNotValid.other = Andere
 game.valid = Spiel gewertet
@@ -949,15 +952,19 @@ settings.date.dmy = Tag/Monat/Jahr
 settings.chat.dateFormat = Datumsformat
 settings.chat.dateFormat.description = In welchem Format das Datum im Chat angezeigt werden soll.
 chat.error.noHashTag = Der Channelname muss mit \# beginnen (Probiere \#{0})
+game.gameStatus.hosting = Am hosten
 mod.idNumber = \#{0}
 label.copy = Kopieren
 settings.fa.allowReplayWhileInGame = Erlaube das Ansehen von Replays wenn du in-game bist
+settings.fa.patchGamePrefs = Patche game.prefs
 settings.fa.allowReplayWhileInGame.description = Wenn du diese experimentelle Funktionalität aktivierst kannst du Replays anschauen, auch wenn du schon in der Lobby bist. Außer den Hacken zu setzten musst du dies auch in der game.prefs Datei aktivieren. Wenn du den unteren Knopf anklickst, wird das für dich erledigt. Falls der Knopf deaktiviert ist, wurde die Datei schon gepatcht. Dir sollte bewusst sein, dass das Starten von unterschiedlichen Spielversionen zu Fehlern führt.
 settings.fa.patchGamePrefsFailed = Fehler beim Patchen der game.prefs Datei.
 settings.fa.allowReplayWhileInGame.experimental = experimentell
+error.game.filesNotAccessible = Manche Spieldateien konnten nicht in das FAF-Verzeichnis kopiert werden. Solange du keine Spieldateien verändert hast, ist das kein Problem. Wir werden das Spiel trotzdem starten.
 game.gameRunning = Spiel konnte nicht gestartet werden weil schon eine Instanz von Forged Alliance offen ist.
 replay.gameRunning = Replay konnte nicht gestartet werden weil schon eine Instanz von Forged Alliance offen ist. Du kannst die experimentelle Funktion um Replays anzusehen, während du in der Lobby bist, in den Optionen anschalten.
 gameUpdate.error.gameNotWritableAllowMultiOn = Das Spiel konnte nicht auf die benötigte Version gepatcht werden. Du hast versucht ein Replay oder ein Spiel mit einer anderen Version als du schon offen hast zu öffen.
+game.create.generationType = Art der generierten Karte\:\nCasual - Vorschau für Client und Lobby wird generiert\nTournament - Erzwingt Zufall, Vorschau wird nicht generiert und der Zeitstempel wird zur Mapbeschreibung hinzugefügt\nBlind - Erzwingt Zufall, Vorschau wird nicht generiert und der Zeitstempel wird zur Mapbeschreibung hinzugefügt\nUnexplored - Das Terrain und die Ressourcen müssen von Einheiten aufgedeckt werden
 chat.userColor = Farbe
 review.currentVersion = aktuelle Version
 review.version = Version {0}
@@ -1008,13 +1015,16 @@ teammatchmaking.notification.inviteAlreadyInQueue.title = Du bist schon in einer
 teammatchmaking.notification.inviteAlreadyInQueue.message = Bitte verlasse alle Warteschlangen bevor du einen Spieler einlädst
 teammatchmaking.notification.joinAlreadyInQueue.title = Du bist schon in einer Warteschlange
 teammatchmaking.notification.joinAlreadyInQueue.message = Bitte verlasse alle Warteschlangen bevor du einer Gruppe beitrittst
+teammatchmaking.notification.customAlreadyInQueue.title = Du bist bereits in einer Matchmaker-Warteschlange
 teammatchmaking.notification.customAlreadyInQueue.message = Bitte verlasse alle Warteschlangen bevor du einem benutzerdefiniertem Spiel beitrittst
 teammatchmaking.notification.gameAlreadyRunning.title = Schon im Spiel
 teammatchmaking.notification.gameAlreadyRunning.message = Du kannst keiner Warteschlange beitreten während du im Spiel bist
+teammatchmaking.playerTitle = Spiele Matchmaking als\:
 teammatchmaking.partyTitle = Deine Gruppe\:
 teammatchmaking.queueTitle = Trete einer oder mehreren Warteschlangen bei wenn du bereit bist\:
 teammatchmaking.queueTitle.inGame = Du kannst keiner Warteschlange beitreten während du im Spiel bist
 teammatchmaking.queueTitle.memberInGame = Du kannst keiner Warteschlange beitreten während jemand im Spiel ist
+teammatchmaking.queueTitle.inParty = Der Party-Leader wird den Warteschlangen beitreten
 teammatchmaking.queueTitle.inQueue = Deine Gruppe ist jetzt in der Warteschlange
 teammatchmaking.queue.ladder1v1 = 1v1 spielen
 teammatchmaking.queue.tmm2v2 = 2v2 spielen
@@ -1023,6 +1033,7 @@ chat.groupChat.playerConnect = {0} ist beigetreten
 game.generateMap.mexSlider = Mexes
 game.generateMap.reclaimSlider = Reclaim
 game.generateMap.unexplored = Unerforscht
+replay.enrich.error = Informationen konnte nicht heruntergeladen werden
 review.delete.error = Diese Rezension konnte nicht gelöscht werden
 review.save.error = Diese Rezension konnte nicht gespeichert werden
 settings.general.debugLog = Aktiviere DEBUG Logging
@@ -1087,6 +1098,7 @@ management.maps.officialMaps = Offizielle Karten
 management.maps.uninstall.error = Kann Karte nicht deinstallieren.
 game.generateMap.commandLine = Kommandozeilenargumente
 game.generateMap.style = Kartenstil
+game.filter.numberOfPlayers = Anzahl Spieler
 game.filter.mapHeight = Kartenhöhe, in km
 game.filter.mapWidth = Kartenbreite, in km
 replay.couldNotParse = Replay konnte nicht geparsed werden.
@@ -1094,3 +1106,15 @@ game.create.numTeams = Anzahl der Teams
 teammatchmaking.searchAndInvite = Suche und lade Spieler ein
 teammatchmaking.search.prompt = Name
 teammatchmaking.search.noOneInvited = Du hast noch niemanden eingeladen.
+player.info.rating = Rating\:
+modVault.recommended = M&M Top-Auswahl
+map.all = Alle Versionen
+map.current = Aktuelle Version
+login.remember = Eingeloggt bleiben
+login.failed = Fehler beim Login
+login.badState = Ungültiger Zustand des Benutzerservices. Bitte ersuche Hilfe im Forum oder in Discord, wenn dies weiterhin auftritt.
+login.oauthBaseUrl = OAuth Basis-URL
+session.expired.title = Sitzung abgelaufen
+session.expired.message = Bitte gib deine Login-Details erneut ein
+login.error = Fehler beim Login\: {0}; {1}
+discord.couldNotOpen = Spiel konnte nicht via Discord geöffnet werden
